WIP: categorical embedding

--- a/Project1/mlhw-mlp-with-preprocess.ipynb
+++ b/Project1/mlhw-mlp-with-preprocess.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Flatten, Activation, BatchNormalization\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.layers import Dense, Dropout, Flatten, Activation, BatchNormalization, Embedding, Input, Reshape, concatenate\n",
     "from keras import metrics\n",
     "from keras.optimizers import Adam, rmsprop\n",
     "from keras.callbacks import TensorBoard, ReduceLROnPlateau\n",
@@ -447,12 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: For Categorical Embeddings\n",
-    "cat_names = [\n",
+    "cat_cols = [\n",
     "    'thal',\n",
     "    'chest_pain_type',\n",
     "    'num_major_vessels',\n",
@@ -461,14 +453,13 @@
     "    'sex',\n",
     "    'exercise_induced_angina'\n",
     "]\n",
-    "cont_names = [\n",
+    "cont_cols = [\n",
     "    'slope_of_peak_exercise_st_segment',\n",
     "    'resting_blood_pressure',\n",
     "    'serum_cholesterol_mg_per_dl'\n",
     "    'oldpeak_eq_st_depression',\n",
     "    'age',\n",
     "    'max_heart_rate_achieved',\n",
-    "    \n",
     "]\n"
    ]
   },
@@ -481,25 +472,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "A `Concatenate` layer requires inputs with matching shapes except for the concat axis. Got inputs shapes: [(None, 1, 2), (None, 1, 2), (None, 1, 2), (None, 1, 1), (None, 1, 2), (None, 1, 1), (None, 1, 1), (None, 5)]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-ee26639824ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcont_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBatchNormalization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mActivation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/tf/lib/python3.6/site-packages/keras/layers/merge.py\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(inputs, axis, **kwargs)\u001b[0m\n\u001b[1;32m    647\u001b[0m         \u001b[0mA\u001b[0m \u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mconcatenation\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minputs\u001b[0m \u001b[0malongside\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    648\u001b[0m     \"\"\"\n\u001b[0;32m--> 649\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mConcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    650\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    651\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/tf/lib/python3.6/site-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    429\u001b[0m                                          \u001b[0;34m'You can build it manually via: '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    430\u001b[0m                                          '`layer.build(batch_input_shape)`')\n\u001b[0;32m--> 431\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munpack_singleton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shapes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    432\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuilt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    433\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/tf/lib/python3.6/site-packages/keras/layers/merge.py\u001b[0m in \u001b[0;36mbuild\u001b[0;34m(self, input_shape)\u001b[0m\n\u001b[1;32m    360\u001b[0m                              \u001b[0;34m'inputs with matching shapes '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m                              \u001b[0;34m'except for the concat axis. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 362\u001b[0;31m                              'Got inputs shapes: %s' % (input_shape))\n\u001b[0m\u001b[1;32m    363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_merge_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: A `Concatenate` layer requires inputs with matching shapes except for the concat axis. Got inputs shapes: [(None, 1, 2), (None, 1, 2), (None, 1, 2), (None, 1, 1), (None, 1, 2), (None, 1, 1), (None, 1, 1), (None, 5)]"
+     ]
+    }
+   ],
    "source": [
-    "model = Sequential()\n",
-    "model.add(BatchNormalization(input_shape=(xsize,)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(256))\n",
+    "inputs = []\n",
+    "for cat_col in cat_cols :\n",
+    "     \n",
+    "    no_of_unique_cat  = train[cat_col].nunique()\n",
+    "    embedding_size = min(np.ceil((no_of_unique_cat)/2), 50 )\n",
+    "    embedding_size = int(embedding_size)\n",
+    "    vocab  = no_of_unique_cat + 1\n",
+    "    \n",
+    "    emb_input = Input(shape=(1,))\n",
+    "    x = Embedding(vocab ,embedding_size, input_length = 1)(emb_input)\n",
+    "    emb_output = Reshape(target_shape=(embedding_size, ))(x)\n",
+    "    inputs.append(x)\n",
     "\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(128))\n",
+    "cont_input = Input(shape=(len(cont_cols),))\n",
+    "inputs.append(cont_input)\n",
     "\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dense(64))\n",
+    "x = concatenate(inputs)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Dense(256)(x)\n",
     "\n",
-    "model.add(Dense(ysize))\n",
-    "model.add(Activation('sigmoid'))\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Dense(128)(x)\n",
+    "\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Dense(64)(x)\n",
+    "\n",
+    "x = Dense(ysize)(x)\n",
+    "model_output = Activation('sigmoid')(x)\n",
+    "\n",
+    "model = Model(\n",
+    "    inputs=inputs, \n",
+    "    outputs=[model_output]\n",
+    ")\n",
     "\n",
     "initial_lr = 0.001\n",
     "\n",
@@ -744,13 +771,7 @@
       "144/144 [==============================] - 0s 267us/step - loss: 0.1390 - binary_accuracy: 0.9653 - val_loss: 0.1638 - val_binary_accuracy: 0.9444\n",
       "Epoch 102/500\n",
       "144/144 [==============================] - 0s 272us/step - loss: 0.0839 - binary_accuracy: 0.9792 - val_loss: 0.1638 - val_binary_accuracy: 0.9444\n",
-      "Epoch 103/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 103/500\n",
       "144/144 [==============================] - 0s 278us/step - loss: 0.0595 - binary_accuracy: 0.9861 - val_loss: 0.1634 - val_binary_accuracy: 0.9444\n",
       "Epoch 104/500\n",
       "144/144 [==============================] - 0s 270us/step - loss: 0.0802 - binary_accuracy: 0.9792 - val_loss: 0.1634 - val_binary_accuracy: 0.9444\n",
