--- a/Project2/CycleSpecGAN.ipynb
+++ b/Project2/CycleSpecGAN.ipynb
@@ -43,6 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Making this notebook work\n",
+    "Download preprocessed audio data and generator checkpoints from https://drive.google.com/open?id=1lCDZDeGmNrk1MvJJj4JYM8O5QDGssM25. Put it in the root directory where this notebook is located."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Training\n",
     "\n",
     "To train, please run `train.py`. I removed the training code here because the notebook becomes very large when logs are being generated which renders it unusable. "
