--- a/Project2/CycleSpecGAN.ipynb
+++ b/Project2/CycleSpecGAN.ipynb
@@ -369,6 +369,7 @@
     }
    ],
    "source": [
+    "# Load checkpoint\n",
     "checkpoint = './checkpoints/IRMAS-pia-2-gac-no-identity/g_AB-epoch-100.h5'\n",
     "g_AB_no_id = load_model(checkpoint, custom_objects={'InstanceNormalization': InstanceNormalization})\n",
     "\n",
@@ -560,15 +561,8 @@
    "source": [
     "librosa.output.write_wav('fake_1.wav', fake_1, 16000)\n",
     "librosa.output.write_wav('fake_2.wav', fake_2, 16000)\n",
-    "librosa.output.write_wav('fake_3.wav', fake_3, 16000)\n"
+    "librosa.output.write_wav('fake_3.wav', fake_3, 16000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
